--- a/past-projects.html
+++ b/past-projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Payton Gunter - Contact</title>
+    <title>Payton Gunter - Past Projects</title>
     <link rel="stylesheet" href="styles.css?v=2">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -21,14 +21,9 @@
             <li><a href="/off-topic.html">Off Topic</a></li>
         </ul>
     </nav>
-    <section id="contact">
-        <h2>Get in Touch</h2>
-        <p>Want to chat about circuits, space, or epic projects? Reach out—I’m always up for a good brainstorm or collaboration!</p>
-        <ul class="contact-info">
-            <li><strong>Email:</strong> <span class="copyable" onclick="copyToClipboard('kerbalengineer098@gmail.com')">kerbalengineer098@gmail.com</span></li>
-            <li><strong>Phone:</strong> <span class="copyable" onclick="copyToClipboard('+1 (205) 800-8664')">+1 (205) 800-8664</span> (Google Voice)</li>
-            <li><strong>GitHub:</strong> <a href="https://github.com/KerbalEngineering">github.com/KerbalEngineering</a></li>
-        </ul>
+    <section id="past-projects">
+        <h2>Past Projects</h2>
+        <p>Digging into the archives! Stay tuned—details on my older builds, from circuit experiments to quirky contraptions, are coming soon.</p>
     </section>
     <footer>
         <p>Contact: <span class="copyable" onclick="copyToClipboard('kerbalengineer098@gmail.com')">kerbalengineer098@gmail.com</span> | <a href="https://github.com/KerbalEngineering">GitHub</a></p>
