--- a/current-projects.html
+++ b/current-projects.html
@@ -4,13 +4,140 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Payton Gunter - Current Projects</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css?v=2">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Roboto', Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            padding-bottom: 60px;
+            line-height: 1.6;
+            background-color: #1a1a1a;
+            color: #e0e0e0;
+        }
+        header {
+            background: linear-gradient(45deg, #14213d, #1b263b);
+            color: #fff;
+            text-align: center;
+            padding: 3rem 1rem;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.5);
+        }
+        header h1 {
+            margin: 0;
+            font-size: 2.8rem;
+            letter-spacing: 1px;
+        }
+        header p {
+            margin: 0.5rem 0;
+            font-size: 1.3rem;
+            color: #778da9;
+        }
+        nav {
+            background: #2a2a2a;
+            padding: 1rem;
+            text-align: center;
+        }
+        nav ul {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            gap: 2rem;
+        }
+        nav a {
+            color: #e0e0e0;
+            text-decoration: none;
+            font-weight: 700;
+            transition: color 0.3s;
+        }
+        nav a:hover {
+            color: #e8dafc;
+        }
+        #current-projects {
+            padding: 2rem;
+            max-width: 1200px;
+            margin: 0 auto;
+            background: #2a2a2a;
+            border-radius: 8px;
+            margin-top: 2rem;
+        }
+        #current-projects h2 {
+            text-align: center;
+            color: #d7bdf2;
+            font-size: 2rem;
+        }
+        .project-detail {
+            background: #333;
+            padding: 1.5rem;
+            border-radius: 8px;
+            margin: 1rem 0;
+        }
+        .project-detail h3 {
+            color: #d7bdf2;
+            margin-top: 0;
+        }
+        .project-detail a {
+            color: #f0e4ff !important;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        .project-detail a:hover {
+            color: #ffffff !important;
+        }
+        .project-detail table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 1rem;
+        }
+        .project-detail th, .project-detail td {
+            padding: 0.75rem;
+            border: 1px solid #778da9;
+            text-align: left;
+        }
+        .project-detail th {
+            background: #2a2a2a;
+            color: #d7bdf2;
+        }
+        footer {
+            text-align: center;
+            padding: 1rem;
+            background: #14213d;
+            color: #778da9;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+        footer a {
+            color: #e8dafc;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        footer a:hover {
+            color: #f0e4ff;
+        }
+        .copyable {
+            color: #e8dafc;
+            font-weight: bold;
+            cursor: pointer;
+            text-decoration: underline;
+            transition: color 0.3s;
+        }
+        .copyable:hover {
+            color: #f0e4ff;
+        }
+        @media (max-width: 600px) {
+            header h1 { font-size: 2rem; }
+            header p { font-size: 1rem; }
+            nav ul { flex-direction: column; gap: 1rem; }
+        }
+    </style>
 </head>
 <body>
     <header>
         <h1>Payton Gunter</h1>
-        <p>Amp Alchemist | Innovator | Space Advocate</p>
+        <p>Electronics Maker | Innovator | Space Advocate</p>
     </header>
     <nav>
         <ul>
@@ -36,9 +163,35 @@
                 <tr><td>Upgrades</td><td>Headlights, controller, silicone potting</td></tr>
             </table>
         </article>
+        <article class="project-detail">
+            <h3>Circuit Crafter</h3>
+            <p>A 2D circuit-building puzzle game. Connect components like wires and resistors to light the LED across multiple levels—test your electronics skills!</p>
+            <a href="/circuit-crafter.html">Play Now</a>
+        </article>
+        <article class="project-detail">
+            <h3>Lunar Station (Test Game)</h3>
+            <p>A 3D strategy game in development. Manage a lunar space station—resources, power, modules, and thermals—plus mini-games like docking ships. Early prototype stage!</p>
+            <a href="/test-game.html">Try the Prototype</a>
+        </article>
     </section>
     <footer>
-        <p>Contact: <a href="mailto:payton@example.com">payton@example.com</a> | <a href="https://github.com/paytongunter">GitHub</a></p>
+        <p>Contact: <span class="copyable" onclick="copyToClipboard('kerbalengineer098@gmail.com')">kerbalengineer098@gmail.com</span> | <a href="https://github.com/KerbalEngineering">GitHub</a></p>
     </footer>
+    <script>
+        function copyToClipboard(text) {
+            const tempInput = document.createElement('textarea');
+            tempInput.value = text;
+            document.body.appendChild(tempInput);
+            tempInput.select();
+            try {
+                document.execCommand('copy');
+                alert('Copied to clipboard: ' + text);
+            } catch (err) {
+                console.error('Copy failed: ', err);
+                alert('Copy failed—please select and copy manually.');
+            }
+            document.body.removeChild(tempInput);
+        }
+    </script>
 </body>
 </html>
