--- a/test-game.html
+++ b/test-game.html
@@ -4,31 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lunar Station Game - Gunter Engineering</title>
-    <link rel="stylesheet" href="/css/styles.css"> <!-- Adjust path if needed -->
+    <link rel="stylesheet" href="styles.css?v=2">
 </head>
 <body>
     <header>
-        <nav>
-            <h1>Gunter Engineering</h1>
-            <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/about.html">About</a></li>
-                <li><a href="/projects.html">Projects</a></li>
-                <li><a href="/test-game.html">Game</a></li>
-            </ul>
-        </nav>
+        <h1>Gunter Engineering</h1>
+        <p>Exploring the Frontiers of Technology</p>
     </header>
 
-    <main>
-        <section id="game-section">
-            <h2>Lunar Station Game</h2>
-            <p>Manage your lunar space station in 3D!</p>
-            <div id="game-container"></div>
-        </section>
-    </main>
+    <nav>
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/about.html">About</a></li>
+            <li><a href="/projects.html">Projects</a></li>
+            <li><a href="/test-game.html">Game</a></li>
+        </ul>
+    </nav>
+
+    <section id="test-game">
+        <h2>Lunar Station Game</h2>
+        <p>Manage your lunar space station in 3D!</p>
+        <div id="game-container"></div>
+    </section>
 
     <footer>
-        <p>&copy; 2025 Gunter Engineering. All rights reserved.</p>
+        <p>© 2025 Gunter Engineering. All rights reserved.</p>
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
