--- a/test-game.html
+++ b/test-game.html
@@ -58,45 +58,64 @@
             const station = new THREE.Group();
 
             // Module 1 (bottom)
-            const moduleGeometry = new THREE.CylinderGeometry(0.5, 0.5, 4, 32);
+            const moduleGeometry = new THREE.CylinderGeometry(1.3, 1.3, 4, 32); // Radius 1.3, length 4
             const moduleMaterial = new THREE.MeshBasicMaterial({ color: 0x666666, wireframe: true });
             const module1 = new THREE.Mesh(moduleGeometry, moduleMaterial);
-            module1.position.y = -2; // Center at y = -2 (half length below origin)
+            module1.position.y = -2; // Center at y = -2
             station.add(module1);
 
             // Module 2 (top)
             const module2 = new THREE.Mesh(moduleGeometry, moduleMaterial);
-            module2.position.y = 2; // Center at y = 2 (half length above origin)
+            module2.position.y = 2; // Center at y = 2
             station.add(module2);
 
-            // Conical ends
-            const coneGeometry = new THREE.CylinderGeometry(0.2, 0.5, 0.3, 32); // Top 0.2, bottom 0.5, height 0.3
+            // Conical ends (0.3 tall, taper to 0.45 radius)
+            const coneGeometry = new THREE.CylinderGeometry(0.45, 1.3, 0.3, 32);
             const coneMaterial = new THREE.MeshBasicMaterial({ color: 0x888888, wireframe: true });
+            // Bottom end
             const coneBottom = new THREE.Mesh(coneGeometry, coneMaterial);
-            coneBottom.position.y = -4.15; // Bottom of module1 (-2 - 2 - 0.15)
+            coneBottom.position.y = -4.15; // -2 - 2 - 0.15
             station.add(coneBottom);
+            // Top end
             const coneTop = new THREE.Mesh(coneGeometry, coneMaterial);
-            coneTop.position.y = 4.15; // Top of module2 (2 + 2 + 0.15)
-            coneTop.rotation.x = Math.PI; // Flip upside down
+            coneTop.position.y = 4.15; // 2 + 2 + 0.15
+            coneTop.rotation.x = Math.PI; // Flip
             station.add(coneTop);
+            // Middle (between modules)
+            const coneMiddleBottom = new THREE.Mesh(coneGeometry, coneMaterial);
+            coneMiddleBottom.position.y = -0.15; // Just below y = 0
+            station.add(coneMiddleBottom);
+            const coneMiddleTop = new THREE.Mesh(coneGeometry, coneMaterial);
+            coneMiddleTop.position.y = 0.15; // Just above y = 0
+            coneMiddleTop.rotation.x = Math.PI; // Flip
+            station.add(coneMiddleTop);
 
-            // Docking ports
-            const portGeometry = new THREE.CylinderGeometry(0.2, 0.2, 0.05, 32); // Radius 0.2, thickness 0.05
+            // Docking ports (radius 0.45, thickness 0.05)
+            const portGeometry = new THREE.CylinderGeometry(0.45, 0.45, 0.05, 32);
             const portMaterial = new THREE.MeshBasicMaterial({ color: 0xaaaaaa, wireframe: true });
+            // Bottom port
             const portBottom = new THREE.Mesh(portGeometry, portMaterial);
-            portBottom.position.y = -4.325; // Beyond cone bottom (-4.15 - 0.15 - 0.025)
+            portBottom.position.y = -4.325; // -4.15 - 0.15 - 0.025
             station.add(portBottom);
+            // Top port
             const portTop = new THREE.Mesh(portGeometry, portMaterial);
-            portTop.position.y = 4.325; // Beyond cone top (4.15 + 0.15 + 0.025)
+            portTop.position.y = 4.325; // 4.15 + 0.15 + 0.025
             station.add(portTop);
+            // Middle ports (between modules)
+            const portMiddleBottom = new THREE.Mesh(portGeometry, portMaterial);
+            portMiddleBottom.position.y = -0.325; // -0.15 - 0.15 - 0.025
+            station.add(portMiddleBottom);
+            const portMiddleTop = new THREE.Mesh(portGeometry, portMaterial);
+            portMiddleTop.position.y = 0.325; // 0.15 + 0.15 + 0.025
+            station.add(portMiddleTop);
 
             scene.add(station);
 
-            camera.position.z = 10;
+            camera.position.z = 15; // Adjusted for larger station
 
             function animate() {
                 requestAnimationFrame(animate);
-                station.rotation.y += 0.005; // Rotate whole station
+                station.rotation.y += 0.005;
                 renderer.render(scene, camera);
             }
             animate();
